<resources>
    <string name="app_name">WeatherWizard</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_alerts">Weather Alert</string>
    <string name="title_settings">Settings</string>

    <string name="temperature_title">Temperature unit</string>
    <string name="wind_speed_title">Wind Speed unit</string>
    <string name="lang_title">Language</string>

    <string name="gps">GPS</string>

    <string name="temp" translatable="false">%1$.1f %2$s</string>
    <string name="wind_speed" translatable="false">%1$.2f %2$s</string>
    <string name="humidity" translatable="false">%1$d %%</string>
    <string name="clouds" translatable="false">%1$d %%</string>
    <string name="pressure" translatable="false">%1$d hPa</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Title</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_alerts">Would you like to receive weather alerts notifications?</string>
    <string name="weather_alert">Weather Alerts</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="alert_type">Alert Type</string>
    <string name="location">Location</string>
    <string name="set_location">Set Location</string>
    <string name="units">Units</string>
    <string name="select_location_map">Please select a location on the map</string>
    <string name="not_set">Not Set</string>
    <string name="no_weather_alerts">There is no weather alerts</string>
    <string name="unknown_place">Unknown place</string>
    <string name="check_for_alerts_between">Check for alerts between:</string>
    <string name="error">Error</string>
</resources>