<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.melnele.weatherwizard.view.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.melnele.weatherwizard.view.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites">
        <action
            android:id="@+id/action_navigation_favourites_to_navigation_favourite_item"
            app:destination="@id/navigation_favourite_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite_item"
        android:name="com.melnele.weatherwizard.view.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="@string/KEY_LAT_LNG"
            app:argType="com.google.android.gms.maps.model.LatLng" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.melnele.weatherwizard.view.ui.alerts.NotificationsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_notifications" />
</navigation>