<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.alerts.NotificationsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:labelFor="@id/tbtn"
        android:text="@string/weather_alert"
        app:layout_constraintBottom_toBottomOf="@+id/tbtn"
        app:layout_constraintEnd_toStartOf="@+id/tbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tbtn" />

    <ToggleButton
        android:id="@+id/tbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tbtn"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tbtn">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:labelFor="@id/swt_alarm"
            android:text="@string/alert_type"
            app:layout_constraintBottom_toBottomOf="@+id/swt_alarm"
            app:layout_constraintEnd_toStartOf="@+id/swt_alarm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/swt_alarm" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swt_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:switchPadding="24dp" />

        <Button
            android:id="@+id/btn_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/from"
            app:layout_constraintBottom_toTopOf="@+id/tv_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btn_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/to"
            app:layout_constraintBottom_toBottomOf="@+id/btn_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_from" />

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_from"
            app:layout_constraintStart_toStartOf="@+id/btn_from"
            app:layout_constraintTop_toBottomOf="@+id/btn_from"
            tools:text="from" />

        <TextView
            android:id="@+id/tv_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_from"
            app:layout_constraintEnd_toEndOf="@+id/btn_to"
            app:layout_constraintStart_toStartOf="@+id/btn_to"
            app:layout_constraintTop_toTopOf="@+id/tv_from"
            tools:text="to" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/check_for_alerts_between"
            app:layout_constraintBottom_toTopOf="@+id/btn_from"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/swt_alarm" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>